--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -196,3 +196,12 @@ a:hover{
     margin: 105px 0 0 0;
 
 }
+/*================================================== movies ==========================================================*/
+.movie-image{
+    height: 150px;
+    width: 100px;
+    box-shadow: 3px 3px 5px rgba(0,0,0,.7);
+}
+
+
+
