--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,9 @@
-/* line 1, style.scss */
+/* line 7, style.scss */
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-/* line 4, style.scss */
+/* line 10, style.scss */
 .top-header {
   height: 30px;
   width: 100%;
@@ -16,22 +16,22 @@ body {
   z-index: 2000;
 }
 
-/* line 15, style.scss */
+/* line 21, style.scss */
 .pointer {
   cursor: pointer;
 }
 
-/* line 18, style.scss */
+/* line 24, style.scss */
 .red {
   color: red;
 }
 
-/* line 21, style.scss */
+/* line 27, style.scss */
 .green {
   color: #4dc71f;
 }
 
-/* line 24, style.scss */
+/* line 30, style.scss */
 .top-header-item {
   display: inline-block;
   height: 30px;
@@ -39,17 +39,17 @@ body {
   padding: 0 5px;
 }
 
-/* line 30, style.scss */
+/* line 36, style.scss */
 ul {
   list-style: none;
 }
 
-/* line 33, style.scss */
+/* line 39, style.scss */
 table {
   width: 100%;
 }
 
-/* line 37, style.scss */
+/* line 43, style.scss */
 th {
   background-color: #5cb85c;
   color: #fff;
@@ -57,59 +57,59 @@ th {
   text-align: center;
 }
 
-/* line 43, style.scss */
+/* line 49, style.scss */
 td {
   padding: 5px;
 }
 
-/* line 47, style.scss */
+/* line 53, style.scss */
 tr:hover {
   background-color: #abef98;
 }
 
-/* line 50, style.scss */
+/* line 56, style.scss */
 a:hover {
   color: cyan;
 }
 
-/* line 53, style.scss */
+/* line 59, style.scss */
 .right {
   float: right;
 }
 
-/* line 56, style.scss */
+/* line 62, style.scss */
 .left {
   float: left;
 }
 
-/* line 59, style.scss */
+/* line 65, style.scss */
 a {
   color: #000;
   text-decoration: none;
 }
 
-/* line 63, style.scss */
+/* line 69, style.scss */
 .top-header a {
   color: #fff;
 }
 
-/* line 66, style.scss */
+/* line 72, style.scss */
 .top-header a:hover {
   color: cyan;
 }
 
-/* line 69, style.scss */
+/* line 75, style.scss */
 .top-header-menu li {
   height: 30px;
   margin: 0 5px;
 }
 
-/* line 73, style.scss */
+/* line 79, style.scss */
 .top-header-menu li a {
   line-height: 30px;
 }
 
-/* line 76, style.scss */
+/* line 82, style.scss */
 #header {
   position: fixed;
   height: 75px;
@@ -132,7 +132,7 @@ a {
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
   z-index: 2000;
 }
-/* line 97, style.scss */
+/* line 103, style.scss */
 #header .logo {
   height: 75px;
   width: 225px;
@@ -147,12 +147,12 @@ a {
   -o-transition: height 0.5s, width 0.5s;
   transition: height 0.5s, width 0.5s;
 }
-/* line 112, style.scss */
+/* line 118, style.scss */
 #header .header-menu {
   width: 550px;
   text-align: right;
 }
-/* line 116, style.scss */
+/* line 122, style.scss */
 #header .header-menu ul {
   margin: 30px 0 0 0;
   -webkit-transition-property: margin;
@@ -166,41 +166,41 @@ a {
   -o-transition-duration: 500ms;
   transition-duration: 500ms;
 }
-/* line 129, style.scss */
+/* line 135, style.scss */
 #header .header-menu ul li {
   margin: 0 5px;
   height: 25px;
   text-align: center;
   display: inline-block;
 }
-/* line 134, style.scss */
+/* line 140, style.scss */
 #header .header-menu ul li a {
   font-size: 16px;
   line-height: 25px;
   color: #000;
 }
-/* line 139, style.scss */
+/* line 145, style.scss */
 #header .header-menu ul li a:hover {
   color: cyan;
 }
 
-/* line 147, style.scss */
+/* line 153, style.scss */
 #header.min {
   height: 50px;
 }
 
-/* line 150, style.scss */
+/* line 156, style.scss */
 .min .logo {
   height: 50px;
   width: 150px;
 }
 
-/* line 155, style.scss */
+/* line 161, style.scss */
 .min .header-menu > ul {
   margin: 15px 0 0 0;
 }
 
-/* line 159, style.scss */
+/* line 165, style.scss */
 #main-search-form {
   margin: 30px 0 0 0;
   text-align: left;
@@ -211,7 +211,7 @@ a {
   transition: margin 0.5s;
 }
 
-/* line 169, style.scss */
+/* line 175, style.scss */
 .main-search-field {
   height: 30px;
   width: 500px;
@@ -221,7 +221,7 @@ a {
   font-size: 16px;
 }
 
-/* line 178, style.scss */
+/* line 184, style.scss */
 .close-search {
   margin: 5px 0 0 0;
   display: inline-block;
@@ -237,12 +237,12 @@ a {
   vertical-align: bottom;
 }
 
-/* line 192, style.scss */
+/* line 198, style.scss */
 .min #main-search-form {
   margin: 5px 0 0 0;
 }
 
-/* line 195, style.scss */
+/* line 201, style.scss */
 .subheader {
   height: 200px;
   background: url(../images/green.png) repeat-x;
@@ -250,19 +250,56 @@ a {
 }
 
 /*========================== blog ============================*/
-/* line 203, style.scss */
+/* line 209, style.scss */
 .article {
-  border: 1px solid black;
+  width: 47%;
+  height: 370px;
+  display: inline-block;
+  -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
+  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
   padding: 5px;
+  margin: 0 10px;
 }
-/* line 206, style.scss */
+/* line 216, style.scss */
+.article .image {
+  width: 100%;
+  display: block;
+}
+/* line 220, style.scss */
 .article .title {
+  text-align: left;
   font-size: 16px;
   font-weight: bold;
-  display: inline-block;
+  display: block;
 }
-/* line 213, style.scss */
+/* line 228, style.scss */
 .article .info {
-  display: inline-block;
-  float: right;
+  display: block;
+  text-align: right;
+  margin: 10px 0 0 0;
+  padding: 5px 0 0 0;
+  background-color: #ddd;
+  height: 30px;
+}
+/* line 235, style.scss */
+.article .info .date {
+  text-align: left;
+}
+/* line 240, style.scss */
+.article .info .tags ul li {
+  display: inline;
+  margin: 0 0 0 5px;
+}
+/* line 243, style.scss */
+.article .info .tags ul li a {
+  color: #761c19;
+}
+/* line 250, style.scss */
+.article .content {
+  display: block;
+  text-overflow: ellipsis;
+  height: 50px;
+  overflow: hidden;
+  text-align: justify;
 }
