--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,6 +11,7 @@ html(ng-app="MyApp")
         script(src='//localhost:8082/livereload.js' type='text/javascript')
         script(src="/javascripts/angular/angular.min.js")
         script(src="/javascripts/angular-animate/angular-animate.js")
+        script(src="/javascripts/angular-sanitize.min.js")
         script(src="/javascripts/angular-route/angular-route.min.js")
         script(src="/javascripts/angular-ui-router/release/angular-ui-router.min.js")
         script(src="/javascripts/ng-file-upload/ng-file-upload-shim.min.js")
