--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,9 @@
-/* line 7, style.scss */
+/* line 12, style.scss */
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-/* line 10, style.scss */
+/* line 15, style.scss */
 .top-header {
   height: 30px;
   width: 100%;
@@ -16,22 +16,22 @@ body {
   z-index: 2000;
 }
 
-/* line 21, style.scss */
+/* line 26, style.scss */
 .pointer {
   cursor: pointer;
 }
 
-/* line 24, style.scss */
+/* line 29, style.scss */
 .red {
   color: red;
 }
 
-/* line 27, style.scss */
+/* line 32, style.scss */
 .green {
   color: #4dc71f;
 }
 
-/* line 30, style.scss */
+/* line 35, style.scss */
 .top-header-item {
   display: inline-block;
   height: 30px;
@@ -39,17 +39,17 @@ body {
   padding: 0 5px;
 }
 
-/* line 36, style.scss */
+/* line 41, style.scss */
 ul {
   list-style: none;
 }
 
-/* line 39, style.scss */
+/* line 44, style.scss */
 table {
   width: 100%;
 }
 
-/* line 43, style.scss */
+/* line 48, style.scss */
 th {
   background-color: #5cb85c;
   color: #fff;
@@ -57,59 +57,59 @@ th {
   text-align: center;
 }
 
-/* line 49, style.scss */
+/* line 54, style.scss */
 td {
   padding: 5px;
 }
 
-/* line 53, style.scss */
+/* line 58, style.scss */
 tr:hover {
   background-color: #abef98;
 }
 
-/* line 56, style.scss */
+/* line 61, style.scss */
 a:hover {
   color: cyan;
 }
 
-/* line 59, style.scss */
+/* line 64, style.scss */
 .right {
   float: right;
 }
 
-/* line 62, style.scss */
+/* line 67, style.scss */
 .left {
   float: left;
 }
 
-/* line 65, style.scss */
+/* line 70, style.scss */
 a {
   color: #000;
   text-decoration: none;
 }
 
-/* line 69, style.scss */
+/* line 74, style.scss */
 .top-header a {
   color: #fff;
 }
 
-/* line 72, style.scss */
+/* line 77, style.scss */
 .top-header a:hover {
   color: cyan;
 }
 
-/* line 75, style.scss */
+/* line 80, style.scss */
 .top-header-menu li {
   height: 30px;
   margin: 0 5px;
 }
 
-/* line 79, style.scss */
+/* line 84, style.scss */
 .top-header-menu li a {
   line-height: 30px;
 }
 
-/* line 82, style.scss */
+/* line 87, style.scss */
 #header {
   position: fixed;
   height: 75px;
@@ -132,7 +132,7 @@ a {
   box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
   z-index: 2000;
 }
-/* line 103, style.scss */
+/* line 108, style.scss */
 #header .logo {
   height: 75px;
   width: 225px;
@@ -147,12 +147,12 @@ a {
   -o-transition: height 0.5s, width 0.5s;
   transition: height 0.5s, width 0.5s;
 }
-/* line 118, style.scss */
+/* line 123, style.scss */
 #header .header-menu {
   width: 550px;
   text-align: right;
 }
-/* line 122, style.scss */
+/* line 127, style.scss */
 #header .header-menu ul {
   margin: 30px 0 0 0;
   -webkit-transition-property: margin;
@@ -166,41 +166,41 @@ a {
   -o-transition-duration: 500ms;
   transition-duration: 500ms;
 }
-/* line 135, style.scss */
+/* line 140, style.scss */
 #header .header-menu ul li {
   margin: 0 5px;
   height: 25px;
   text-align: center;
   display: inline-block;
 }
-/* line 140, style.scss */
+/* line 145, style.scss */
 #header .header-menu ul li a {
   font-size: 16px;
   line-height: 25px;
   color: #000;
 }
-/* line 145, style.scss */
+/* line 150, style.scss */
 #header .header-menu ul li a:hover {
   color: cyan;
 }
 
-/* line 153, style.scss */
+/* line 158, style.scss */
 #header.min {
   height: 50px;
 }
 
-/* line 156, style.scss */
+/* line 162, style.scss */
 .min .logo {
   height: 50px;
   width: 150px;
 }
 
-/* line 161, style.scss */
+/* line 168, style.scss */
 .min .header-menu > ul {
   margin: 15px 0 0 0;
 }
 
-/* line 165, style.scss */
+/* line 172, style.scss */
 #main-search-form {
   margin: 30px 0 0 0;
   text-align: left;
@@ -211,7 +211,7 @@ a {
   transition: margin 0.5s;
 }
 
-/* line 175, style.scss */
+/* line 182, style.scss */
 .main-search-field {
   height: 30px;
   width: 500px;
@@ -221,7 +221,7 @@ a {
   font-size: 16px;
 }
 
-/* line 184, style.scss */
+/* line 191, style.scss */
 .close-search {
   margin: 5px 0 0 0;
   display: inline-block;
@@ -237,12 +237,12 @@ a {
   vertical-align: bottom;
 }
 
-/* line 198, style.scss */
+/* line 205, style.scss */
 .min #main-search-form {
   margin: 5px 0 0 0;
 }
 
-/* line 201, style.scss */
+/* line 208, style.scss */
 .subheader {
   height: 200px;
   background: url(../images/green.png) repeat-x;
@@ -250,30 +250,30 @@ a {
 }
 
 /*========================== blog ============================*/
-/* line 209, style.scss */
+/* line 216, style.scss */
 .article {
-  width: 47%;
+  width: 49%;
   height: 370px;
   display: inline-block;
   -webkit-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
   -moz-box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
   box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.7);
   padding: 5px;
-  margin: 0 10px;
+  margin: 0 0 10px 0;
 }
-/* line 216, style.scss */
+/* line 223, style.scss */
 .article .image {
   width: 100%;
   display: block;
 }
-/* line 220, style.scss */
+/* line 227, style.scss */
 .article .title {
   text-align: left;
   font-size: 16px;
   font-weight: bold;
   display: block;
 }
-/* line 228, style.scss */
+/* line 235, style.scss */
 .article .info {
   display: block;
   text-align: right;
@@ -282,24 +282,126 @@ a {
   background-color: #ddd;
   height: 30px;
 }
-/* line 235, style.scss */
+/* line 242, style.scss */
 .article .info .date {
   text-align: left;
 }
-/* line 240, style.scss */
+/* line 247, style.scss */
 .article .info .tags ul li {
   display: inline;
   margin: 0 0 0 5px;
 }
-/* line 243, style.scss */
+/* line 250, style.scss */
 .article .info .tags ul li a {
   color: #761c19;
 }
-/* line 250, style.scss */
+/* line 257, style.scss */
 .article .content {
   display: block;
   text-overflow: ellipsis;
-  height: 50px;
+  height: 70px;
   overflow: hidden;
   text-align: justify;
+}
+
+/* line 265, style.scss */
+.article:nth-child(2n) {
+  margin-left: 2%;
+}
+
+/*===============================================  widgets  ==================================================*/
+/* line 270, style.scss */
+.widget {
+  width: 100%;
+  border: 0px solid black;
+}
+/* line 273, style.scss */
+.widget ul {
+  margin: 0 0 10px 0;
+  padding: 0;
+}
+/* line 279, style.scss */
+.widget .tabs ul li {
+  display: inline-block;
+  cursor: pointer;
+  border: 1px solid #9d9d9d;
+  height: 30px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  line-height: 30px;
+  padding: 0 5px;
+}
+/* line 288, style.scss */
+.widget .tabs ul .tab-active {
+  background-color: #9acfea;
+}
+/* line 293, style.scss */
+.widget .popular {
+  height: 50px;
+  font-size: 11px;
+  border: 1px solid #8c8c8c;
+  margin: 0 0 5px 0;
+}
+/* line 298, style.scss */
+.widget .popular .image {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+}
+/* line 304, style.scss */
+.widget .popular span {
+  vertical-align: top;
+  width: calc(100% - 55px);
+  display: inline-block;
+}
+/* line 308, style.scss */
+.widget .popular span .title {
+  display: inline-block;
+  height: 13px;
+  font-weight: bold;
+}
+/* line 313, style.scss */
+.widget .popular span .content {
+  display: inline-block;
+  height: 35px;
+  -ms-text-overflow: ellipsis;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+/* line 323, style.scss */
+.widget .comment {
+  height: 50px;
+  margin: 0 0 5px 0;
+}
+/* line 326, style.scss */
+.widget .comment .image {
+  width: 50px;
+  height: 50px;
+  display: inline-block;
+}
+/* line 332, style.scss */
+.widget .comment .text {
+  display: inline-block;
+}
+/* line 337, style.scss */
+.widget .tag {
+  background-color: #9d9d9d;
+  display: inline-block;
+  padding: 0 5px 0 5px;
+  height: 30px;
+  border-radius: 15px 3px 3px 15px;
+  margin: 0 5px 5px 0;
+}
+/* line 344, style.scss */
+.widget .tag i {
+  font-size: 8px;
+  color: #fff;
+  line-height: 30px;
+}
+/* line 349, style.scss */
+.widget .tag a {
+  color: #0f0f0f;
+  line-height: 30px;
+  font-weight: bold;
 }
